syntax="proto3";
package dinoGunio;

option csharp_namespace = "C.Proto.DinoGun";

enum MSGID
{
    S_ENTER = 0;
    S_INIT = 1;
    C_MOVE = 2;
    S_MOVE = 3;
    S_PLAYERLIST = 4;
}

message PlayerInfo
{
    int32 playerId = 1;
    Position position = 2;
}

message Position
{
    float rotate = 1;
    float x = 2;
    float y = 3;
}

message CMove 
{
    PlayerInfo playerInfo = 1;
}

message SMove 
{
    PlayerInfo playerInfo = 1;
}